--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,8 @@
 #chatboxdiv {
 	    border: 2px solid #D9D9D9;
 	    margin-left:50px;
-	    height:500px;
+	    height:550px;
+	    overflow: scroll; 
 }
 
 #enter-text {
